Quick styles and add link to old songs

--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<h1>Chris Eisenbraun</h1>
-<p>Howdy, I'm Chris. I'm a web developer focusing on CSS and Accessbility.</p>
-
-<p>This site is under construction and will be updated soon-ish. Maybe.</p>
-
-<ul class="flex">
-    <li><a href="https://www.linkedin.com/in/chriseisenbraun/" target="_blank">LinkedIn </a></li>
-    <li><a href="http://codepen.io/chriseisenbraun/" target="_blank">Codepen</a></li>
-    <li><a href="https://github.com/chriseisenbraun/" target="_blank">GitHub</a></li>
-    <li><a href="https://codesandbox.io/u/chriseisenbraun" target="_blank">CodeSandbox </a></li>
-</ul>
-
 <body>
+
+    <div class="page-wrap">
+        <h1>Chris Eisenbraun</h1>
+        <p>Howdy, I'm Chris. I'm a web developer focusing on CSS and Accessbility.</p>
+
+        <p>This site is under construction and will be updated soon-ish. Maybe.</p>
+
+        <ul class="flex">
+            <li><a href="https://www.linkedin.com/in/chriseisenbraun/" target="_blank">LinkedIn </a></li>
+            <li><a href="http://codepen.io/chriseisenbraun/" target="_blank">Codepen</a></li>
+            <li><a href="https://github.com/chriseisenbraun/" target="_blank">GitHub</a></li>
+            <li><a href="https://codesandbox.io/u/chriseisenbraun" target="_blank">CodeSandbox </a></li>
+            <li><a href="https://www.reverbnation.com/yippy/songs" target="_blank">Old Songs</a></li>
+        </ul>
+    </div>
 
 </body>
 
